--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pricing Table</title>
+    <link rel="stylesheet" href="pricing.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700">
 </head>
 
 <body>
@@ -26,7 +28,7 @@
             <h2 class="pricing-header">Small team</h2>
             <ul class="pricing-features">
                 <li class="pricing-features-item">Never sleeps</li>
-                <li class="pricing-features-item">Multiple workers for more powerful apps</li>
+                <li class="pricing-features-item">Multiple workers for better apps</li>
             </ul>
             <span class="pricing-price">$150</span>
             <a href="#/" class="pricing-button is-featured">Free trial</a>
